--- a/chart_test_5.html
+++ b/chart_test_5.html
@@ -103,7 +103,7 @@
 	
     <h2 align="center">Humidor Conditions</h2>
     
-    <div id="chart_gauge" style="height: 200px; width:400px; margin: 0 auto;"></div>
+    <div id="chart_gauge" style="max-height: 200px; max-width:400px; margin: 0 auto;"></div>
     <div id="chart_line" style="width: 90%; margin: 0 auto;"></div>
 
     <!--<p><a href="https://google-developers.appspot.com/chart/interactive/docs/gallery/linechart" target="_blank" title="Visualization: Line Chart">Google charts info</a>
